# intership_project

./: .gitignore  Dockerfile  README.md  docker-compose.yml
src/laser_detection/: CMakeLists.txt  package.xml
src/laser_detection/src/: obstacle_extractor.cpp
src/robots/: package.xml  setup.py
src/robots/launch/: spawn_robot.launch.py
src/robots/robot_designs/: lidar.xacro  turtlebot.urdf.xacro  turtlebot_core.xacro
src/robots/robots/: teleop_wasd.py
src/shared_world_model/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/shared_world_model/include/shared_world_model/: covariance_intersection.hpp  data_association.hpp  hungarian.hpp  types.hpp  world_model_node.hpp
src/shared_world_model/src/: main.cpp
